# shop

./: .env  .gitignore  pyproject.toml  requirements.txt
account/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_managers.py
config/: celery.py  settings.py  urls.py
order/: models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_status.py  0004_alter_order_payment.py
products/: admin.py  models.py  serlializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
