[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["tetradui <kutmanalown@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.0.4,<5.1.0"
djangorestframework = "^3.15.1"
rest-framework-simplejwt = "^0.0.2"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
pillow = "^10.3.0"
drf-yasg = "^1.21.7"
django-filter = "^24.2"
setuptools = "^69.5.1"
python-slugify = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
